# bevy_edge_detection_outline

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/rules/: core.mdc
app/: Cargo.toml
examples/: 3d_shapes.rs
src/: edge_detection_shader.wgsl  lib.rs
