[package]
name = "bevy_edge_detection_outline"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jungkwon Lee <deruci89@gmail.com>"]
description = "Edge detection outline post-processing plugin for Bevy (WGSL shader)."
homepage = "https://github.com/Mediocre-AI/bevy_edge_detection_outline"
keywords = ["bevy", "plugin", "post-processing", "edge-detection"]
categories = ["game-engines", "graphics", "rendering"]

[dependencies]
bevy = { version = "0.18", features = ["webgpu"] }

[dev-dependencies]
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34"